WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
244027
RTCDTMFSenderBackend::onTonePlayed callback does not need any parameter
https://bugs.webkit.org/show_bug.cgi?id=244027
Summary
RTCDTMFSenderBackend::onTonePlayed callback does not need any parameter
youenn fablet
Reported
2022-08-17 03:48:55 PDT
RTCDTMFSenderBackend::onTonePlayed callback does not need any parameter
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-17 03:49:11 PDT
<
rdar://problem/98774949
>
youenn fablet
Comment 2
2022-08-17 03:53:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3401
EWS
Comment 3
2022-08-18 00:49:44 PDT
Committed
253550@main
(42a10b5f848f): <
https://commits.webkit.org/253550@main
> Reviewed commits have been landed. Closing PR #3401 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug