RTCDTMFSenderBackend::onTonePlayed callback does not need any parameter https://bugs.webkit.org/show_bug.cgi?id=244027 rdar://problem/98774949

Reviewed by Eric Carlson.

The callback does not need any parameter since we ask the backend to play one tone at a time.
Update the code accordingly.
Make it clear that we play one tone at a time by passing a char instead of of a 1-char string.

Covered by existing tests.

* Source/WebCore/Modules/mediastream/RTCDTMFSender.cpp:
(WebCore::RTCDTMFSender::RTCDTMFSender):
(WebCore::RTCDTMFSender::playNextTone):
* Source/WebCore/platform/mediastream/RTCDTMFSenderBackend.h:
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCDTMFSenderBackend.cpp:
(WebCore::LibWebRTCDTMFSenderBackend::playTone):
(WebCore::LibWebRTCDTMFSenderBackend::OnToneChange):
(WebCore::LibWebRTCDTMFSenderBackend::onTonePlayed):
* Source/WebCore/platform/mediastream/libwebrtc/LibWebRTCDTMFSenderBackend.h:

Canonical link: https://commits.webkit.org/253550@main